# pottato

./: .conform.yaml  .editorconfig  .gitignore  devenv.nix  pyproject.toml  run.py
.github/workflows/: lint.yaml
alembic/: env.py
alembic/versions/: fcee88a0cbac_adding_user_model.py
pottato/: __init__.py  config.py  models.py
pottato/services/: database.py
pottato/services/db/: __init__.py
pottato/services/db/models/: __init__.py  file.py
pottato/templates/: base.html  index.html  snippet.html  snippets.html
pottato/views/: __init__.py  root.py  user.py
pottato/views/templates/: base.html  index.html
tests/integration/: conftest.py  test_create_user.py  test_root.py
